--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -14,7 +14,7 @@
   // --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-bg-color: #{$grey-color};
   --global-footer-text-color: #{$grey-color-light};
-  --global-footer-link-color: #{$white-color};
+  --global-footer-link-color: #{$grey-color};
   --global-distill-app-color: #{$grey-color};
   --global-divider-color: rgba(0,0,0,.1);
   --global-card-bg-color: #{$white-color};
@@ -58,9 +58,8 @@ html[data-theme='dark'] {
   --global-theme-color-light: #{$light-cyan-color};
   --global-hover-color: #{$cyan-color};
   --global-hover-text-color: #{$white-color};
-  --global-footer-bg-color: #{$grey-color-light};
-  --global-footer-text-color: #{$grey-color-dark};
-  // --global-footer-link-color: #{$black-color};
+  --global-footer-bg-color: #{$grey-color-dark};
+  --global-footer-text-color: #{$grey-color};
   --global-footer-link-color: #{$grey-color-light};
   --global-distill-app-color: #{$grey-color-light};
   --global-divider-color: #424246;
